--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "flowbite",
     "headless"
   ],
-  "homepage": "https://github.com/action-hong/unocss-preset-scrollbar#readme",
+  "homepage": "https://github.com/Julien-R44/unocss-preset-flowbite#readme",
   "bugs": {
-    "url": "https://github.com/action-hong/unocss-preset-scrollbar/issues"
+    "url": "https://github.com/Julien-R44/unocss-preset-flowbite/issues"
   },
   "license": "MIT",
   "author": "Julien Ripouteau <julien@ripouteau.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/action-hong/unocss-preset-scrollbar.git"
+    "url": "git+https://github.com/Julien-R44/unocss-preset-flowbite.git"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -39,9 +39,13 @@
     "prepublishOnly": "pnpm build",
     "release": "bumpp --commit --push --tag && pnpm publish"
   },
+  "peerDependencies": {
+    "unocss": ">= 0.31.13 < 1"
+  },
   "devDependencies": {
     "@julr/eslint-config": "^0.3.0",
     "@types/node": "^18.0.0",
+    "bumpp": "^8.2.1",
     "eslint": "^8.19.0",
     "mini-svg-data-uri": "^1.4.4",
     "prettier": "^2.7.1",
@@ -64,7 +68,8 @@
   "eslintConfig": {
     "extends": "@julr",
     "rules": {
-      "n/no-unsupported-features/es-syntax": "off"
+      "n/no-unsupported-features/es-syntax": "off",
+      "n/no-missing-import": "off"
     }
   }
 }
