chore: add publishConfig

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rimraf dist && unbuild",
     "dev": "unbuild --stub",
