--- a/packages/unocss-preset-flowbite/package.json
+++ b/packages/unocss-preset-flowbite/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/Julien-R44/unocss-preset-flowbite.git"
   },
-  "main": "./dist/index.cjs",
+  "main": "./dist/index.mjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -46,6 +46,7 @@
     "mini-svg-data-uri": "^1.4.4"
   },
   "devDependencies": {
+    "@unocss/core": "^0.43.0",
     "unbuild": "^0.7.4",
     "unocss": "^0.43.0",
     "vite": "^2.9.13"
