--- a/playground/package.json
+++ b/playground/package.json
@@ -16,10 +16,11 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.1.71",
-    "@julr/unocss-preset-flowbite": "workspace:*",
+    "@julr/unocss-preset-flowbite": "link:../packages/unocss-preset-flowbite",
     "@types/node": "^18.0.0",
     "@unocss/preset-icons": "^0.43.0",
     "@unocss/reset": "^0.43.0",
+    "@unocss/runtime": "^0.43.0",
     "@unocss/vite": "^0.43.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.7.4",
