--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
 
   "compilerOptions": {
-    "target": "es2017",
+    "target": "ESNext",
     "module": "esnext",
     "lib": ["esnext"],
     "moduleResolution": "Node",
