--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "version": "0.0.1-beta.1",
   "packageManager": "pnpm@7.5.0",
   "description": "💅 An adaptation of the Flowbite Tailwind plugin for UnoCSS",
+  "author": "Julien Ripouteau <julien@ripouteau.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/Julien-R44/unocss-preset-flowbite#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Julien-R44/unocss-preset-flowbite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Julien-R44/unocss-preset-flowbite/issues"
+  },
   "keywords": [
     "unocss",
     "unocss-preset",
     "flowbite",
     "headless"
   ],
-  "homepage": "https://github.com/Julien-R44/unocss-preset-flowbite#readme",
-  "bugs": {
-    "url": "https://github.com/Julien-R44/unocss-preset-flowbite/issues"
-  },
-  "license": "MIT",
-  "author": "Julien Ripouteau <julien@ripouteau.com>",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Julien-R44/unocss-preset-flowbite.git"
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
     "dist"
   ],
@@ -47,17 +47,17 @@
     "unocss": ">= 0.31.13 < 1"
   },
   "devDependencies": {
-    "@julr/eslint-config": "^0.3.0",
-    "@types/node": "^18.0.0",
+    "@julr/eslint-config": "^0.3.2",
+    "@types/node": "^18.7.14",
     "bumpp": "^8.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.23.0",
     "mini-svg-data-uri": "^1.4.4",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.4",
-    "unbuild": "^0.7.4",
-    "unocss": "^0.43.0",
-    "vite": "^2.9.13"
+    "typescript": "^4.8.2",
+    "unbuild": "^0.8.10",
+    "unocss": "^0.45.14",
+    "vite": "^3.0.9"
   },
   "prettier": {
     "trailingComma": "es5",
