--- a/package.json
+++ b/package.json
@@ -43,21 +43,23 @@
     "prepublishOnly": "pnpm build",
     "release": "bumpp --commit --push --tag && pnpm publish"
   },
+  "dependencies": {
+    "mini-svg-data-uri": "^1.4.4"
+  },
   "peerDependencies": {
     "unocss": ">= 0.31.13 < 1"
   },
   "devDependencies": {
     "@julr/eslint-config": "^0.3.2",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.8.3",
     "bumpp": "^8.2.1",
-    "eslint": "^8.23.0",
-    "mini-svg-data-uri": "^1.4.4",
+    "eslint": "^8.25.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.2",
-    "unbuild": "^0.8.10",
-    "unocss": "^0.45.14",
-    "vite": "^3.0.9"
+    "typescript": "^4.8.4",
+    "unbuild": "^0.8.11",
+    "unocss": "^0.45.29",
+    "vite": "^3.1.7"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -74,6 +76,13 @@
     "rules": {
       "n/no-unsupported-features/es-syntax": "off",
       "n/no-missing-import": "off"
+    }
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@babel/core"
+      ]
     }
   }
 }
